--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,6 +60,6 @@
         android:label="GoalDetailFragment">
         <argument
             android:name="goal"
-            app:argType="com.devux.finflow.data.entity.GoalEntity" />
+            app:argType="com.devux.finflow.data.GoalEntity" />
     </fragment>
 </navigation>
