--- a/app/src/main/res/layout/fragment_goal_detail.xml
+++ b/app/src/main/res/layout/fragment_goal_detail.xml
@@ -202,8 +202,7 @@
                 android:id="@+id/rvHistory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:paddingBottom="16dp"
+                android:layout_marginTop="@dimen/dimen_12"
                 tools:itemCount="3"
                 tools:listitem="@layout/item_goal_history" />
 
