--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.devux.finflow.main.view.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_addTransactionFragment"
             app:destination="@id/addTransactionFragment" />
@@ -23,7 +23,7 @@
         android:id="@+id/goalsFragment"
         android:name="com.devux.finflow.main.view.goals.GoalsFragment"
         android:label="fragment_goals"
-        tools:layout="@layout/fragment_goals" >
+        tools:layout="@layout/fragment_goals">
         <action
             android:id="@+id/action_goalsFragment_to_addGoalFragment"
             app:destination="@id/addGoalFragment" />
@@ -53,13 +53,24 @@
     <fragment
         android:id="@+id/addGoalFragment"
         android:name="com.devux.finflow.main.view.goals.add_goal.AddGoalFragment"
-        android:label="AddGoalFragment" />
+        android:label="AddGoalFragment">
+        <argument
+            android:name="goal"
+            app:argType="com.devux.finflow.data.GoalEntity"
+            app:nullable="true"
+            android:defaultValue="@null"
+            />
+    </fragment>
     <fragment
         android:id="@+id/goalDetailFragment"
         android:name="com.devux.finflow.main.view.goals.detail.GoalDetailFragment"
         android:label="GoalDetailFragment">
         <argument
             android:name="goal"
-            app:argType="com.devux.finflow.data.GoalEntity" />
+            app:argType="com.devux.finflow.data.GoalEntity"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_goalDetailFragment_to_addGoalFragment"
+            app:destination="@id/addGoalFragment" />
     </fragment>
 </navigation>
