--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="C Muthu Krishnan"
+        android:text="Devux"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
